[gd_scene load_steps=5 format=3 uid="uid://bp1qm8bfnlq7m"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_sv5gt"]
[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/GlobalVariables_EventInputForm.gd" id="2_yt462"]
[ext_resource type="PackedScene" uid="uid://civbxt4nfyill" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_DropdownList.tscn" id="3_peys3"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/NavigationButtonTemplate.tscn" id="4_kkbe7"]

[node name="GlobalVariables_EventInputForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sv5gt")
script = ExtResource("2_yt462")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -132.5
offset_right = 197.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Global Variable Changes"
horizontal_alignment = 1

[node name="TableDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_peys3")]
visible = false
layout_mode = 2
label_text = "Table"
is_label_button = false

[node name="KeyDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_peys3")]
layout_mode = 2
label_text = "Global Variable"
is_label_button = false
reference_table_name = "10029"

[node name="Input" parent="Control/VBoxContainer/KeyDropdown" index="1"]
item_count = 4
popup/item_0/text = "Level 1 Complete"
popup/item_1/text = "Is Segment 2 Complete"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "Default Text"
popup/item_3/id = 3

[node name="FieldDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_peys3")]
layout_mode = 2
label_text = "Variable Key"
is_label_button = false

[node name="InputContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" parent="Control/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("4_kkbe7")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="Control/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("4_kkbe7")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[connection signal="input_selection_changed" from="Control/VBoxContainer/KeyDropdown" to="." method="_on_key_dropdown_input_selection_changed"]
[connection signal="input_selection_changed" from="Control/VBoxContainer/FieldDropdown" to="." method="_on_field_dropdown_input_selection_changed"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/TableDropdown"]
[editable path="Control/VBoxContainer/TableDropdown/Label"]
[editable path="Control/VBoxContainer/KeyDropdown"]
[editable path="Control/VBoxContainer/KeyDropdown/Label"]
[editable path="Control/VBoxContainer/FieldDropdown"]
[editable path="Control/VBoxContainer/FieldDropdown/Label"]
